fix(global): fix style errors && wip fix for address bar problem on mobile

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -202,6 +202,7 @@ $spacing-2xl: 200px;
     margin: 0 24px;
     @include for-tablet-portrait-up {
         margin: 0 100px;
+        overflow: auto;
     }
 }
 
