--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -28,6 +28,7 @@
 @media (min-width: 640px) {
   #app {
     margin: 0 100px;
+    overflow: auto;
   }
 }
 
@@ -132,9 +133,6 @@ h1 {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  min-height: -webkit-fill-available;
-  height: 100%;
-  max-height: 100%;
   width: 0;
   position: fixed;
   z-index: 1;
@@ -156,6 +154,9 @@ h1 {
   }
 }
 .sidebar--open {
+  height: 100vh;
+  height: -webkit-fill-available;
+  height: fill-available;
   width: 100%;
   padding: 24px;
   padding-top: 0;
@@ -760,12 +761,14 @@ h1 {
 .about .details__title, .details__label, .skills__title {
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 26px;
-  letter-spacing: -0.03em;
   text-transform: capitalize;
+  /* identical to box height, or 217% */
+  letter-spacing: -0.03em;
   text-transform: uppercase;
   border-bottom: hsl(225deg, 7%, 12%) 1px solid;
+  padding-bottom: 24px;
 }
 @media (max-width: 640px) {
   .about .details__title, .details__label, .skills__title {
