--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -43,9 +43,6 @@
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    min-height: -webkit-fill-available;
-    height: 100%;
-    max-height: 100%;
     width: 0;
     position: fixed;
     z-index: 1;
@@ -64,6 +61,9 @@
         display: none;
     }
     &--open {
+        height: 100vh;
+        height: -webkit-fill-available;
+        height: fill-available;
         width: 100%;
         padding: 24px;
         padding-top: 0;
